corrected spacing for map page

--- a/styles/ContentBox.module.css
+++ b/styles/ContentBox.module.css
@@ -10,8 +10,8 @@
 .content {
     display: flex;
     flex-direction: column;
-    max-width: 600px;
-    gap: 500px;
+    max-width: 30%;
+    /* gap: 500px; */
 }
 
 /* 
@@ -31,6 +31,7 @@
     justify-content: center;
     align-items: center;
     padding: 1rem;
+    margin-bottom: 500px;
 
 
 }
@@ -79,6 +80,12 @@
     right: 45%;
     bottom: -2rem;
     display: block;
+}
+
+@media(max-width:900px) {
+    .content {
+        max-width: 600px;
+    }
 }
 
 
